--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -201,7 +201,7 @@ Swedish universities and their consortia also argued for policy changes
 (Holden et al., 2023; Widding, 2024). Furthermore, cOAlition S conclude
 its financial support of transformative agreements at the end of 2024,
 but continue to view open access resulting from such agreements as
-compliant. \footnote{\url{https://www.coalition-s.org/coalition-s-confirms-the-end-of-its-financial-support-for-open-access-publishing-under-transformative-arrangements-after-2024/}}.
+compliant.\footnote{\url{https://www.coalition-s.org/coalition-s-confirms-the-end-of-its-financial-support-for-open-access-publishing-under-transformative-arrangements-after-2024/}}
 cOAlition S also removed the majority of hybrid journals from its
 Transformative Journal program in 2023 due to publishers' failure to
 meet self-defined open access growth targets (Brainard, 2023). By
